counter-app/rke2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-counter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-counter
  template:
    metadata:
      labels:
        app: simple-counter
    spec:
      containers:
      - name: web
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
      volumes:
      - name: web-content
        configMap:
          name: web-content
      - name: nginx-config
        configMap:
          name: nginx-config
