counter-app/rke2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-counter-service
spec:
  selector:
    app: simple-counter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
